Fixed the horizontal scrolling

--- a/generalStyles.css
+++ b/generalStyles.css
@@ -254,7 +254,7 @@ html{
 }
 .parentImg .logo-text img{
     
-    width: 32%;
+    width: 37%;
     border-radius: 50%;
     box-shadow: 0px 27px 50px 0px rgba(58, 50, 29, 0.37);
 
